fix(index): :bug: reduce size of rotatable model on mobile, replace position of some elements on mobile

--- a/src/components/RotatableModel/rotatable-model.module.css
+++ b/src/components/RotatableModel/rotatable-model.module.css
@@ -1,5 +1,5 @@
 .canvas {
-  height: 35vh;
+  height: 25vh;
   width: 100%;
 }
 
